--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     </button>
    <nav>
       <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
-        <li ><a routerLink=" " href="#">Home</a></li>
+        <li ><a routerLink="/">Home</a></li>
         <li><a href="#about-us">About-us</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#pricings">Pricing</a></li>
