--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,41 +1,4 @@
-<!-- <div class="footer">
-    <div class="container footer-content">
-        <div class="m-5">
-            <div class="row">
-                <div class="col-sm-4 mt-4">
-                    <h5>Our Offer</h5>
-                    <p class="ml-3">We offer instant recharge of Airtime, DataBundle, 
-                        Cable Tv(Dstv, GoTv & Startimes), Electricity Bill Payment
-                        and many more.
-                    </p>
-                </div>
-                <div class="col-sm-4 mt-4">
-                    <h5>Useful Links</h5>
-                    <ul class="mt-3 ml-3">
-                        <li>Home</li>
-                        <li>About Us</li>
-                        <li>Services</li>
-                        <li>Login</li>
-                        <li>Register</li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 mt-4">
-                    <h5>Our Contact</h5>
-                    <ul class="mt-3 ml-3">
-                        <li><i class="fa fa-address-card" aria-hidden="true"></i>
-                            Address: Owerri-Imo-Nigeria</li>
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                            Email: michealmadu73@gmail.com
-                        </li>
-                        <li><i class="fa fa-phone" aria-hidden="true"></i>
-                            Phone: 09049749527
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
+
 <div class="footer">
     <div class="footer-content ">
         <div class="row p-5">
@@ -48,11 +11,11 @@
                 <div class="">
                     <h4>Short Links</h4>
                     <ul class="mt-4">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li><a routerLink="/" >Home</a></li>
+                        <li><a href="#about-us">About Us</a></li>
+                        <li><a href="#service">Services</a></li>
+                        <li><a routerLink="login" >Sign In</a></li>
+                        <li><a routerLink="signup" >Sign Up</a></li>
                     </ul>
                 </div>         
             </div>
