--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,14 +10,15 @@
 
 
 .top-div{
-  height: 120vh;
-  /* width: 100vw; */
   position: relative;
   background-image: url("../../assets/images/bg-4.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position:  50% 50%;
   margin-bottom: 60px;
+  width:100%;
+  height: auto;
+  min-height:650px ;
 
   animation-name: changebg;
   animation-duration: 15s;
@@ -53,8 +54,8 @@
 .top-div::before{
   content: "";
   position: absolute;
-  height:100%;
   width:100%;
+  min-height:100%;
   left:0;
   top:0;
   background-color:rgba(0, 0, 0, 0.6) ;
@@ -429,7 +430,9 @@
   height:250px;
 }
 
-
+.data-content span{
+  font-size: small;
+}
 
 
 
