--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,3 @@
-<style>
-
-</style>
 
 <div class="top-div">
   <div class="child-div">
@@ -12,8 +9,8 @@
             accommodating price.
           </p>
           <div class="btn-container">
-             <a class="home-btns lg-btn" routerLink="login">Login</a>
-            <a routerLink="signup" class="home-btns sn-btn">Sign up</a>
+             <a class="home-btns lg-btn" routerLink="login">Sign In</a>
+            <a routerLink="signup" class="home-btns sn-btn">Sign Up</a>
           </div>
     </div>
   </div>
@@ -37,11 +34,11 @@
             alt="mtn logo" class="logo mt-3">
             <h6 class="mt-2">Mtn Data</h6>
           </div>
-          <div class="data-content">
-            <div class="row data-row" *ngFor="let item of DataPricings">
-              <span class="col-4">{{item.data}}</span>
-              <span class="col-4">{{item.price}}</span>
-              <span class="col-4">{{item.duration}}</span>
+          <div class="data-content" style="color: white;">
+            <div class="row data-row" *ngFor="let item of DataPricings.mtnPricings">
+              <span class="col-4">{{item.dataPrice}}</span>
+              <span class="col-4">{{item.dataPrice}}</span>
+              <span class="col-4">{{item.dataDuration}}</span>
             </div>
               <div class="mt-4 text-center">
                 <a class="waves-effect waves-light btn mt-3 mb-5" style="color:white">
@@ -58,10 +55,10 @@
             <h6 class="mt-2">Airtel Data</h6>
           </div>
           <div class="data-content" style="color: white;" >
-            <div class="row data-row" *ngFor="let item of DataPricings">
-              <span class="col-4">{{item.data}}</span>
-              <span class="col-4">{{item.price}}</span>
-              <span class="col-4">{{item.duration}}</span>
+            <div class="row data-row" *ngFor="let item of DataPricings.airtelPricings">
+              <span class="col-4">{{item.dataSize}}</span>
+              <span class="col-4">{{item.dataPrice}}</span>
+              <span class="col-4">{{item.dataDuration}}</span>
             </div>
             <div class="mt-4 text-center">
               <a class="waves-effect waves-light btn mt-3 mb-5" style="color:white">
@@ -79,10 +76,10 @@
               <h6 class="mt-2">Glo Data</h6>
             </div>
             <div class="data-content" style="color: white;">
-              <div class="row data-row" *ngFor="let item of DataPricings">
-                <span class="col-4">{{item.data}}</span>
-                <span class="col-4">{{item.price}}</span>
-                <span class="col-4">{{item.duration}}</span>
+              <div class="row data-row" *ngFor="let item of DataPricings.gloPricings">
+                <span class="col-4">{{item.dataSize}}</span>
+                <span class="col-4">{{item.dataPrice}}</span>
+                <span class="col-4">{{item.dataDuration}}</span>
               </div>
               <div class="mt-4 text-center">
                 <a class="waves-effect waves-light btn mt-3 mb-5" style="color:white">
@@ -100,10 +97,10 @@
             <h6 class="mt-2">9mobile Data</h6>
           </div>
           <div class="data-content" style="color: white;">
-            <div class="row data-row" *ngFor="let item of DataPricings">
-              <span class="col-4">{{item.data}}</span>
-              <span class="col-4">{{item.price}}</span>
-              <span class="col-4">{{item.duration}}</span>
+            <div class="row data-row" *ngFor="let item of DataPricings.etisalatPricings">
+              <span class="col-4">{{item.dataSize}}</span>
+              <span class="col-4">{{item.dataPrice}}</span>
+              <span class="col-4">{{item.dataDuration}}</span>
             </div>
             <div class="mt-4 text-center">
               <a class="waves-effect waves-light btn mt-3 mb-5" style="color:white">
@@ -173,8 +170,6 @@
   </div>
 </section>
 
-
-
 <section class="testimonials">
  
   <div class='container-fluid pb-5'>    
@@ -183,29 +178,6 @@
       <p>please do checkout the feedbacks from  some of our customers</p>
     </div> 
     <owl-carousel-o [options]="customOptions">
-      <!-- <ng-template carouselSlide >
-        <div  class=" testimonials-div">
-          <div style="margin-left:20px">
-            <img src="../../assets/images/Apostrophe.jpg" 
-            style="width:50px; aspect-ratio:1" alt="apostrophe">
-            <div class="mt-3 row">
-              <div class="col-4">
-                <p style="margin-top: 3px;">
-                  On a serious note when it comes to the best platform 
-                  to get affordable  data Subplug is the best.
-                   So i recommend u guys to use Subplug as
-                    their services are fast, automated, and secured.
-                </p>
-                <h6 class="mt-2" style="color:green">Madu Felix</h6>
-              </div>
-              <div class="col-7">
-               <img src="../../assets/images/Testimonial-image2.jpeg" style="margin-top: 13px;" alt="testimonial-avatar">
-              </div>
-            </div>
-          </div>
-        
-        </div>
-      </ng-template>   -->
       <ng-template carouselSlide style="width:500px">
         <div  class=" testimonials-div">
           <div >
@@ -268,26 +240,6 @@
           </div>  
         </div>
       </ng-template>   
-      <!-- <ng-template carouselSlide [width]="carouselWidth">
-        <div  class=" testimonials-div">
-          <div style="margin-left:20px">
-            <img src="../../assets/images/Apostrophe.jpg" 
-            style="width:50px; aspect-ratio:1" alt="apostrophe">
-            <div class="mt-3 row">
-              <div class="col-5">
-                <p class="container-fluid" style="margin-top: 15px;">
-                  For me it is the quick response to issues.
-                   and i think we have been doing well so far.
-                </p>
-                <h6 class="mt-2" >Gideon Hassan</h6>
-              </div>
-              <div class="col-7">
-               <img src="../../assets/images/Testimonial-image1.jpeg" alt="testimonial-avatar">
-              </div>
-            </div>
-          </div>  
-        </div>
-      </ng-template>  -->
     </owl-carousel-o>   
   </div>  
 </section>
