--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="login-body">
+    <div class="login-content container">
+        <h5>Login</h5>
+        <h6 class="mt-5">Have an Account?</h6>
+        <div class="row">
+        <form [formGroup]="loginData" (ngSubmit)="submit(loginData)">
+            <input class="login-input col-12 mt-3" formControlName="username" placeholder="Username:">
+            <p class="input-error col-12 text-danger"*ngIf="username.invalid && username.touched">username is required</p>
+            <input class="login-input col-12 mt-3 mb-3" type="password" formControlName="password" placeholder="password:">
+            <p class="input-error col-12 text-danger" *ngIf="password.invalid && password.touched">password is required</p>
+           <div class="col-12">
+                <a class="login-btn " (click)="submit(loginData)">Sign In
+                    <i class="fa fa-spinner fa-spin" *ngIf="isClicked"></i>
+                </a>
+           </div>    
+           <div class="row mt-3">
+            <p class="col-8 lg-ch"><input type="checkbox" name="rememberMe" class="mr-2"  formControlName="rememberMe">Remeber Me</p>
+            <a href="http://"  class="col-4 forgot-password">forgot password?</a>
+        </div>
+        </form>
+        </div>
+    </div>
+</div>
